# xhell-dev

./: CMakeLists.txt  Makefile  README.md  xhell.sh
include/: cd.h  common.h  completions.h  exec.h  io.h  local.h
src/: ast.c  completions.c  exec.c  fs.c  io.c  local.c  main.c
src/commands/: cd.c
test/Job_Control/: jobcon.c
test/Job_Control/include/: jobcon.h
